--- a/output/index.html
+++ b/output/index.html
@@ -26,39 +26,14 @@
                 
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Tom</h2>
+        <h2 class="card-title">k</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:tomk235@gmail.com">tomk235@gmail.com</a></li>
-            <li class="list-group-item">Office number: 4</li>
-        </ul>
-    </div>
-</div><div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Lindsey</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:lindsey34@yahoo.com">lindsey34@yahoo.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/lindseyw" target="_blank"
-                    rel="noopener noreferrer">lindseyw</a></li>
-        </ul>
-    </div>
-</div><div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Rachel</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:rachelsuc@hotmail.com">rachelsuc@hotmail.com</a></li>
-            <li class="list-group-item">School: Baylor University</li>
+            <li class="list-group-item">Email: <a href="mailto:lo@yahoo.com">lo@yahoo.com</a></li>
+            <li class="list-group-item">Office number: 9</li>
         </ul>
     </div>
 </div>
